--- a/index.html
+++ b/index.html
@@ -7,16 +7,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
     <title>TENNOLOCK</title>
 </head>
 
 <body>
     <header>
-
+        <h1>TENNOLOCK</h1>
+        <h2>Il lucchetto <span class="gradient-bg">Rivoluzionario</span></h2>
     </header>
 
     <main>
-
+        <div class="section-container">
+            <img class="divider" src="media/blue-waves.svg">
+            <section class="blue">
+                <h1>Placeholder</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse porro explicabo aperiam? Illum, molestias?</p>
+            </section>
+        </div>
+        <div class="section-container">
+            <img class="divider" src="media/cyan-waves.svg">
+            <section class="cyan">
+                <h1>Placeholder</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse porro explicabo aperiam? Illum, molestias?</p>
+            </section>
+        </div>
+        <div class="section-container">
+            <img class="divider" src="media/yellow-waves.svg">
+            <section class="yellow">
+                <h1>Placeholder</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse porro explicabo aperiam? Illum, molestias?</p>
+            </section>
+        </div>
     </main>
 
     <footer>
