--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <h1>TENNOLOCK</h1>
         <h2>Il lucchetto <span class="gradient-bg">Rivoluzionario</span></h2>
+        <img class="logo" src="media/logo.png">
     </header>
 
     <main>
@@ -22,21 +23,27 @@
             <img class="divider" src="media/blue-waves.svg">
             <section class="blue">
                 <h1>Placeholder</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse porro explicabo aperiam? Illum, molestias?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur
+                    ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse
+                    porro explicabo aperiam? Illum, molestias?</p>
             </section>
         </div>
         <div class="section-container">
             <img class="divider" src="media/cyan-waves.svg">
             <section class="cyan">
                 <h1>Placeholder</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse porro explicabo aperiam? Illum, molestias?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur
+                    ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse
+                    porro explicabo aperiam? Illum, molestias?</p>
             </section>
         </div>
         <div class="section-container">
-            <img class="divider" src="media/yellow-waves.svg">
-            <section class="yellow">
+            <img class="divider" src="media/pink-waves.svg">
+            <section class="pink">
                 <h1>Placeholder</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse porro explicabo aperiam? Illum, molestias?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur
+                    ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse
+                    porro explicabo aperiam? Illum, molestias?</p>
             </section>
         </div>
     </main>
