--- a/index.html
+++ b/index.html
@@ -7,54 +7,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="style.css" rel="stylesheet">
     <title>TENNOLOCK</title>
 </head>
 
 <body>
-    <header>
-        <h1>TENNOLOCK</h1>
-        <h2>Il lucchetto <span class="gradient-bg">Rivoluzionario</span></h2>
-        <img class="logo" src="media/logo.png">
-    </header>
+    <div class="page-wrapper">
+        <header>
+            <h1 class="gradient-bg">TENNOLOCK</h1>
+            <h2>Il lucchetto <span class="gradient-bg">Rivoluzionario</span></h2>
+            <img class="logo" src="media/logo.png">
+        </header>
 
-    <main>
-        <div class="section-container">
-            <img class="divider" src="media/blue-waves.svg">
-            <section class="blue">
-                <h1>Placeholder</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur
-                    ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse
-                    porro explicabo aperiam? Illum, molestias?</p>
-            </section>
-        </div>
-        <div class="section-container">
-            <img class="divider" src="media/cyan-waves.svg">
-            <section class="cyan">
-                <h1>Placeholder</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur
-                    ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse
-                    porro explicabo aperiam? Illum, molestias?</p>
-            </section>
-        </div>
-        <div class="section-container">
-            <img class="divider" src="media/pink-waves.svg">
-            <section class="pink">
-                <h1>Placeholder</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto, consectetur
-                    ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta, esse
-                    porro explicabo aperiam? Illum, molestias?</p>
-            </section>
-        </div>
-    </main>
+        <main>
+            <div class="section-container">
+                <img class="divider" src="media/blue-waves.svg">
+                <section class="blue">
+                    <h1>Placeholder</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto,
+                        consectetur
+                        ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta,
+                        esse
+                        porro explicabo aperiam? Illum, molestias?</p>
+                </section>
+            </div>
+            <div class="section-container">
+                <img class="divider" src="media/cyan-waves.svg">
+                <section class="cyan">
+                    <h1>Placeholder</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto,
+                        consectetur
+                        ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta,
+                        esse
+                        porro explicabo aperiam? Illum, molestias?</p>
+                </section>
+            </div>
+            <div class="section-container">
+                <img class="divider" src="media/pink-waves.svg">
+                <section class="pink">
+                    <h1>Placeholder</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto,
+                        consectetur
+                        ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta,
+                        esse
+                        porro explicabo aperiam? Illum, molestias?</p>
+                </section>
+            </div>
+            <div class="section-container footer">
+                <img class="divider" src="media/black-waves.svg">
+                <section class="black bg-light text-center">
+                    <footer class="text-center p-3">
+                        <i class="bi bi-instagram"></i>
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-youtube"></i>
+                        <i class="bi bi-linkedin"></i>
+                        <br>
+                        © <span id="copyright-year"></span> Copyright
+                        <a href="https://iquick.me">TENNOLOGI SRL</a>
+                    </footer>
+                </section>
+            </div>
+        </main>
+    </div>
 
-    <footer>
-
-    </footer>
+    <button id="go-to-top" class="hidden">
+        <i class="bi bi-arrow-up"></i>
+    </button>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
