--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
             <div class="section-container">
                 <img class="divider" src="media/blue-waves.svg">
                 <section class="blue">
-                    <h1>Placeholder</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dolorum ducimus architecto,
-                        consectetur
-                        ratione quisquam pariatur, et repellat necessitatibus vero quia blanditiis repudiandae soluta,
-                        esse
-                        porro explicabo aperiam? Illum, molestias?</p>
+                    <div class="carousel">
+                        <img class="carousel-image" src="media/lock1.png">
+                        <img class="carousel-image" src="media/lock2.webp">
+                        <img class="carousel-image" src="media/lock3.webp">
+                    </div>
                 </section>
             </div>
             <div class="section-container">
@@ -58,13 +57,15 @@
                 <img class="divider" src="media/black-waves.svg">
                 <section class="black bg-light text-center">
                     <footer class="text-center p-3">
-                        <i class="bi bi-instagram"></i>
-                        <i class="bi bi-facebook"></i>
-                        <i class="bi bi-youtube"></i>
-                        <i class="bi bi-linkedin"></i>
+                        <a href="https://instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
+                        <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><i class="bi bi-youtube"></i></a>
+                        <a href="https://www.linkedin.com/" target="_blank"><i class="bi bi-linkedin"></i></a>
                         <br>
+                        <div class="copyright">
                         © <span id="copyright-year"></span> Copyright
                         <a href="https://iquick.me">TENNOLOGI SRL</a>
+                    </div>
                     </footer>
                 </section>
             </div>
