--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="section-container">
                 <img class="divider" src="media/blue-waves.svg">
                 <section class="blue">
-                    <h1>GALLERIA DEI PRODOTTI</h1>
+                    <h1>GALLERIA DEI PRODOTTI</h1>section h1
                     <div id="product-carousel" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -72,7 +72,7 @@
                 <section class="pink">
                     <h1>I PRODOTTI</h1>
                     <div class="products">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="media/lock1.png" class="card-img-top p-5">
                             <div class="card-body">
                                 <h4>Tennoround Master</h4>
@@ -81,7 +81,7 @@
                                     difesa avanzati. <br>Questo lucchetto è di ultima generazione Tennolock.</p>
                             </div>
                         </div>
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="media/lock2.webp" class="card-img-top p-5">
                             <div class="card-body">
                                 <h4>Tennosafe V2</h4>
@@ -90,11 +90,12 @@
                                     cassaforte come protezione aggiuntiva.</p>
                             </div>
                         </div>
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="media/lock3.webp" class="card-img-top p-5">
                             <div class="card-body">
                                 <h4>Tennobike Model 3</h4>
-                                <p class="card-text">Hai paura dei [redacted] ? Non c'è problema! Da ora in poi la tua bicicletta sarà sempre al sicuro grazie al <strong>Tennobike Model 3</strong></p>
+                                <p class="card-text">Hai paura dei [redacted] ? Non c'è problema! Da ora in poi la tua
+                                    bicicletta sarà sempre al sicuro grazie al <strong>Tennobike Model 3</strong></p>
                             </div>
                         </div>
                     </div>
