removed "section h1" from the body wtf

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="section-container">
                 <img class="divider" src="media/blue-waves.svg">
                 <section class="blue">
-                    <h1>GALLERIA DEI PRODOTTI</h1>section h1
+                    <h1>GALLERIA DEI PRODOTTI</h1>
                     <div id="product-carousel" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
