new chi siamo, no animations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,33 @@
         <header>
             <h1 class="gradient-bg">TENNOLOCK</h1>
             <h2>Il lucchetto <span class="gradient-bg">Rivoluzionario</span></h2>
-            <img class="logo" src="media/logo.png">
+            <img class="logo-padding gradient-shadow" src="media/logo.png">
+            <br>
+            <button onclick="eventChiSiamo()" class="chi-siamo-button gradient-shadow">
+                Chi siamo
+            </button>
+            <p class="chi-siamo-text" hidden>
+                Benvenuti in TennoLock, una startup innovativa che offre lucchetti smart e
+                tecnologici di alta qualità a un prezzo molto accessibile.
+                <br><br>
+                TennoLock è una soluzione ideale per chi cerca un modo sicuro e conveniente per proteggere i propri
+                oggetti di valore. I nostri lucchetti sono progettati con la più recente tecnologia di sicurezza e sono
+                dotati di funzionalità avanzate che li rendono molto convenienti da usare.
+                <br><br>
+                Il nostro prodotto offre una vasta gamma di caratteristiche innovative, tra cui l'apertura con impronta
+                digitale e la possibilità di aprire il lucchetto tramite Bluetooth dal proprio smartphone.
+                <br><br>
+                TennoLock è il miglior prodotto che puoi trovare sul mercato ad un costo incredibilmente basso. Siamo
+                riusciti a mantenere il prezzo del nostro prodotto molto accessibile grazie all'utilizzo di materiali di
+                alta qualità e alla scelta di un processo produttivo efficiente e razionale.
+                <br><br>
+                La nostra missione è quella di offrire ai nostri clienti la massima sicurezza e comfort a un
+                prezzo accessibile.
+                <br><br>
+                In conclusione, se stai cercando un modo sicuro e conveniente per proteggere i tuoi oggetti di valore,
+                TennoLock è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi oggetti di valore con il nostro lucchetto smart e tecnologico di
+                alta qualità!</span>
+            </p>
         </header>
 
         <main>
@@ -131,6 +157,7 @@
     <script src="scripts/slideshow.js"></script>
     <script src="scripts/go_to_top.js"></script>
     <script src="scripts/copyright.js"></script>
+    <script src="scripts/chi_siamo.js"></script>
 </body>
 
 </html>
