new animation fadein, fadeout doesnt work

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button onclick="eventChiSiamo()" class="chi-siamo-button gradient-shadow">
                 Chi siamo
             </button>
-            <p class="chi-siamo-text" hidden>
+            <p class="chi-siamo-text fadeout" hidden>
                 Benvenuti in TennoLock, una startup innovativa che offre lucchetti smart e
                 tecnologici di alta qualità a un prezzo molto accessibile.
                 <br><br>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="member-frame">
                         <img class="team-member" src="media/lulli.png">
-                        <h3>FIlippo Lulli</h3>
+                        <h3>Filippo Lulli</h3>
                     </div>
                 </section>
             </div>
