--- a/index.html
+++ b/index.html
@@ -24,29 +24,32 @@
             <div class="section-container">
                 <img class="divider" src="media/green-waves.svg">
                 <section class="green">
-                    <p class="chi-siamo-text">
-                        <h1>Chi Siamo</h1>
-                        Benvenuti in TennoLock, una startup innovativa che offre lucchetti smart e
-                        tecnologici di alta qualità a un prezzo molto accessibile.
-                        <br><br>
-                        TennoLock è una soluzione ideale per chi cerca un modo sicuro e conveniente per proteggere i propri
-                        oggetti di valore. I nostri lucchetti sono progettati con la più recente tecnologia di sicurezza e sono
-                        dotati di funzionalità avanzate che li rendono molto convenienti da usare.
-                        <br><br>
-                        Il nostro prodotto offre una vasta gamma di caratteristiche innovative, tra cui l'apertura con impronta
-                        digitale e la possibilità di aprire il lucchetto tramite Bluetooth dal proprio smartphone.
-                        <br><br>
-                        TennoLock è il miglior prodotto che puoi trovare sul mercato ad un costo incredibilmente basso. Siamo
-                        riusciti a mantenere il prezzo del nostro prodotto molto accessibile grazie all'utilizzo di materiali di
-                        alta qualità e alla scelta di un processo produttivo efficiente e razionale.
-                        <br><br>
-                        La nostra missione è quella di offrire ai nostri clienti la massima sicurezza e comfort a un
-                        prezzo accessibile.
-                        <br><br>
-                        In conclusione, se stai cercando un modo sicuro e conveniente per proteggere i tuoi oggetti di valore,
-                        TennoLock è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi oggetti di valore con il nostro lucchetto smart e tecnologico di
-                        alta qualità!</span>
-                    </p>
+                    <div class="chi-siamo-text">
+                        <p>
+                            <h1 class="chi-siamo">Chi Siamo</h1>
+                            Benvenuti in TennoLock, una startup innovativa che offre lucchetti smart e
+                            tecnologici di alta qualità a un prezzo molto accessibile.
+                            <br><br>
+                            TennoLock è una soluzione ideale per chi cerca un modo sicuro e conveniente per proteggere i propri
+                            oggetti di valore. I nostri lucchetti sono progettati con la più recente tecnologia di sicurezza e sono
+                            dotati di funzionalità avanzate che li rendono molto convenienti da usare.
+                            <br><br>
+                            Il nostro prodotto offre una vasta gamma di caratteristiche innovative, tra cui l'apertura con impronta
+                            digitale e la possibilità di aprire il lucchetto tramite Bluetooth dal proprio smartphone.
+                            <br><br>
+                            TennoLock è il miglior prodotto che puoi trovare sul mercato ad un costo incredibilmente basso. Siamo
+                            riusciti a mantenere il prezzo del nostro prodotto molto accessibile grazie all'utilizzo di materiali di
+                            alta qualità e alla scelta di un processo produttivo efficiente e razionale.
+                            <br><br>
+                            La nostra missione è quella di offrire ai nostri clienti la massima sicurezza e comfort a un
+                            prezzo accessibile.
+                            <br><br>
+                            In conclusione, se stai cercando un modo sicuro e conveniente per proteggere i tuoi oggetti di valore,
+                            TennoLock è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi oggetti di valore con il nostro lucchetto smart e tecnologico di
+                            alta qualità!</span>
+                        </p>
+                    </div>
+                    
                 </section>
             </div>
             <div class="section-container">
