added google translate, fixed team position in the index and rotate css

--- a/index.html
+++ b/index.html
@@ -18,38 +18,57 @@
             <h1 class="gradient-bg">TENNOLOCK</h1>
             <h2>Il lucchetto <span class="gradient-bg">Rivoluzionario</span></h2>
             <img class="logo-padding gradient-shadow" src="media/logo.png">
-        </header>
+            <!-- Traduttore -->
+            <div class="google-translator">
+                <div id="google_translate_element">Cambia lingua</div>
+                <script type="text/javascript">
+                    function googleTranslateElementInit() {
+                        new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+                    }
+                </script>
+            </div>
+            <!-- Traduttore -->
+            <br>
 
+        </header>
         <main>
             <div class="section-container">
                 <img class="divider" src="media/green-waves.svg">
                 <section class="green">
                     <div class="chi-siamo-text">
+
                         <p>
-                            <h1 class="chi-siamo">Chi Siamo</h1>
-                            Benvenuti in TennoLock, una startup innovativa che offre lucchetti smart e
-                            tecnologici di alta qualità a un prezzo molto accessibile.
-                            <br><br>
-                            TennoLock è una soluzione ideale per chi cerca un modo sicuro e conveniente per proteggere i propri
-                            oggetti di valore. I nostri lucchetti sono progettati con la più recente tecnologia di sicurezza e sono
-                            dotati di funzionalità avanzate che li rendono molto convenienti da usare.
-                            <br><br>
-                            Il nostro prodotto offre una vasta gamma di caratteristiche innovative, tra cui l'apertura con impronta
-                            digitale e la possibilità di aprire il lucchetto tramite Bluetooth dal proprio smartphone.
-                            <br><br>
-                            TennoLock è il miglior prodotto che puoi trovare sul mercato ad un costo incredibilmente basso. Siamo
-                            riusciti a mantenere il prezzo del nostro prodotto molto accessibile grazie all'utilizzo di materiali di
-                            alta qualità e alla scelta di un processo produttivo efficiente e razionale.
-                            <br><br>
-                            La nostra missione è quella di offrire ai nostri clienti la massima sicurezza e comfort a un
-                            prezzo accessibile.
-                            <br><br>
-                            In conclusione, se stai cercando un modo sicuro e conveniente per proteggere i tuoi oggetti di valore,
-                            TennoLock è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi oggetti di valore con il nostro lucchetto smart e tecnologico di
+                        <h1 class="chi-siamo">Chi Siamo</h1>
+                        Benvenuti in TennoLock, una startup innovativa che offre lucchetti smart e
+                        tecnologici di alta qualità a un prezzo molto accessibile.
+                        <br><br>
+                        TennoLock è una soluzione ideale per chi cerca un modo sicuro e conveniente per proteggere i
+                        propri
+                        oggetti di valore. I nostri lucchetti sono progettati con la più recente tecnologia di sicurezza
+                        e sono
+                        dotati di funzionalità avanzate che li rendono molto convenienti da usare.
+                        <br><br>
+                        Il nostro prodotto offre una vasta gamma di caratteristiche innovative, tra cui l'apertura con
+                        impronta
+                        digitale e la possibilità di aprire il lucchetto tramite Bluetooth dal proprio smartphone.
+                        <br><br>
+                        TennoLock è il miglior prodotto che puoi trovare sul mercato ad un costo incredibilmente basso.
+                        Siamo
+                        riusciti a mantenere il prezzo del nostro prodotto molto accessibile grazie all'utilizzo di
+                        materiali di
+                        alta qualità e alla scelta di un processo produttivo efficiente e razionale.
+                        <br><br>
+                        La nostra missione è quella di offrire ai nostri clienti la massima sicurezza e comfort a un
+                        prezzo accessibile.
+                        <br><br>
+                        In conclusione, se stai cercando un modo sicuro e conveniente per proteggere i tuoi oggetti di
+                        valore,
+                        TennoLock è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi oggetti
+                            di valore con il nostro lucchetto smart e tecnologico di
                             alta qualità!</span>
                         </p>
                     </div>
-                    
+
                 </section>
             </div>
             <div class="section-container">
@@ -70,32 +89,6 @@
                         </div>
                     </div>
                     <h2 id="product-description"></h2>
-                </section>
-            </div>
-            <div class="section-container">
-                <img class="divider" src="media/cyan-waves.svg">
-                <section class="cyan">
-                    <h1>IL TEAM</h1>
-                    <div class="member-frame">
-                        <img class="team-member" src="media/quick.png">
-                        <h3>Leonardo Di Carlo</h3>
-                    </div>
-                    <div class="member-frame">
-                        <img class="team-member" src="media/jack.png">
-                        <h3>Giacomo Meratti</h3>
-                    </div>
-                    <div class="member-frame">
-                        <img class="team-member" src="media/battistini.png">
-                        <h3>Niccolò Batistini</h3>
-                    </div>
-                    <div class="member-frame">
-                        <img class="team-member" src="media/ed.png">
-                        <h3>Edmard Guilot</h3>
-                    </div>
-                    <div class="member-frame">
-                        <img class="team-member" src="media/lulli.png">
-                        <h3>Filippo Lulli</h3>
-                    </div>
                 </section>
             </div>
             <div class="section-container">
@@ -132,6 +125,32 @@
                     </div>
                 </section>
             </div>
+            <div class="section-container">
+                <img class="divider" src="media/cyan-waves.svg">
+                <section class="cyan">
+                    <h1>IL TEAM</h1>
+                    <div class="member-frame">
+                        <img class="team-member" src="media/quick.png">
+                        <h3>Leonardo Di Carlo</h3>
+                    </div>
+                    <div class="member-frame">
+                        <img class="team-member" src="media/jack.png">
+                        <h3>Giacomo Meratti</h3>
+                    </div>
+                    <div class="member-frame">
+                        <img class="team-member" src="media/battistini.png">
+                        <h3>Niccolò Batistini</h3>
+                    </div>
+                    <div class="member-frame">
+                        <img class="team-member" src="media/ed.png">
+                        <h3>Edmard Guilot</h3>
+                    </div>
+                    <div class="member-frame">
+                        <img class="team-member" src="media/lulli.png">
+                        <h3>Filippo Lulli</h3>
+                    </div>
+                </section>
+            </div>
             <div class="section-container footer">
                 <img class="divider" src="media/black-waves.svg">
                 <section class="black bg-light text-center">
@@ -163,6 +182,8 @@
     <script src="scripts/go_to_top.js"></script>
     <script src="scripts/copyright.js"></script>
     <script src="scripts/chi_siamo.js"></script>
+    <script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 
 </html>
