--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
     <script src="scripts/chi_siamo.js"></script>
     <script type="text/javascript"
         src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        <script src="scripts/remove_translate.js"></script>
 </body>
 
 </html>
