--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <div class="google-translator">
                 <div id="google_translate_element">Cambia lingua</div>
                 <script type="text/javascript">
-                    function googleTranslateElementInit() {
+                    function googleTranslateElementInit()
+                    {
                         new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
                     }
                 </script>
@@ -35,10 +36,9 @@
             <div class="section-container">
                 <img class="divider" src="media/green-waves.svg">
                 <section class="green">
-                    <div class="chi-siamo-text">
-
+                    <div class="who-we-are">
                         <p>
-                        <h1 class="chi-siamo">Chi Siamo</h1>
+                        <h1>CHI SIAMO</h1>
                         Benvenuti in TennoLock, una startup innovativa che offre lucchetti smart e
                         tecnologici di alta qualità a un prezzo molto accessibile.
                         <br><br>
@@ -63,7 +63,7 @@
                         <br><br>
                         In conclusione, se stai cercando un modo sicuro e conveniente per proteggere i tuoi oggetti di
                         valore,
-                        TennoLock è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi oggetti
+                        Tennolock è la scelta perfetta per te. <span class="slogan"> Inizia a proteggere i tuoi oggetti
                             di valore con il nostro lucchetto smart e tecnologico di
                             alta qualità!</span>
                         </p>
@@ -118,7 +118,7 @@
                             <img src="media/lock3.webp" class="card-img-top p-5">
                             <div class="card-body">
                                 <h4>Tennobike Model 3</h4>
-                                <p class="card-text">Hai paura dei [redacted] ? Non c'è problema! Da ora in poi la tua
+                                <p class="card-text">Hai paura dei ladri ? Non c'è problema! Da ora in poi la tua
                                     bicicletta sarà sempre al sicuro grazie al <strong>Tennobike Model 3</strong></p>
                             </div>
                         </div>
@@ -148,6 +148,28 @@
                     <div class="member-frame">
                         <img class="team-member" src="media/lulli.png">
                         <h3>Filippo Lulli</h3>
+                    </div>
+                </section>
+            </div>
+            <div class="section-container">
+                <img class="divider" src="media/orange-waves.svg">
+                <section class="orange">
+                    <h1>I PUNTI VENDITA</h1>
+                    <div class="store-frame">
+                        <a href="https://wish.com" target="_blank"><img class="store" src="media/wishLogo.png"></a>
+                        <h3>Wish</h3>
+                    </div>
+                    <div class="store-frame">
+                        <a href="https://aliexpress.com" target="_blank"><img class="store" src="media/aliexpressLogo.png"></a>
+                        <h3>AliExpress</h3>
+                    </div>
+                    <div class="store-frame">
+                        <a href="https://ebay.com" target="_blank"><img class="store" src="media/ebayLogo.png"></a>
+                        <h3>Ebay</h3>
+                    </div>
+                    <div class="store-frame">
+                        <a href="https://amazon.it" target="_blank"><img class="store" src="media/amazonLogo.png"></a>
+                        <h3>Amazon</h3>
                     </div>
                 </section>
             </div>
@@ -181,10 +203,9 @@
     <script src="scripts/slideshow.js"></script>
     <script src="scripts/go_to_top.js"></script>
     <script src="scripts/copyright.js"></script>
-    <script src="scripts/chi_siamo.js"></script>
     <script type="text/javascript"
         src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-        <script src="scripts/remove_translate.js"></script>
+    <script src="scripts/remove_translate.js"></script>
 </body>
 
 </html>
